fix: fixed overwraping issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+strong {
+  overflow-wrap: break-word;
+  white-space: normal;
+}
+
 @import 'base.css';
 @import 'components.css';
 @import 'utilities.css';
